--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        Rock Paper Scissors
+        <h1>Rock Paper Scissors</h1>
     </header>
 
     <div class="score-board">
@@ -18,23 +18,25 @@
         <span id="user-score">0</span>:<span id="computer-span">0</span>
     </div>
 
-    <div id="result">
+    <div class="results">
         <p>Paper covers rock. You win!</p>
     </div>
 
     <div class="choices">
 
         <div class="choice" id="rock">
-            <img src="Images/Rock.png" alt="rock">
+            <img src="Images/rock.png" alt="rock">
         </div>
 
         <div class="choice" id="paper">
-            <img src="Images/Paper.png" alt="paper">
+            <img src="Images/paper.png" alt="paper">
         </div>
 
         <div class="choice" id="scissors">
-            <img src="Images/Scissors.png" alt="scissors">
+            <img src="Images/scissors.png" alt="scissors">
         </div>
     </div>
+
+    <p id="action-message">Make your move!</p>
 </body>
 </html>
