--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="score-board">
         <div id="user-label" class="badge">user</div>
         <div id="comp-label" class="badge">comp</div>
-        <span id="user-score">0</span>:<span id="computer-span">0</span>
+        <span id="user-score">0</span>:<span id="computer-score">0</span>
     </div>
 
     <div class="results">
@@ -38,6 +38,10 @@
     </div>
 
     <p id="action-message">Make your move!</p>
+
+    <footer>
+        Made by ABSTERGO © <span id="current-date">0000</span>
+    </footer>
 
     <script src="app.js"></script>
 </body>
