add footer hiperlink to github profile

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <p id="action-message">Make your move!</p>
 
     <footer>
-        Made by ABSTERGO © <span id="current-date">0000</span>
+        Made by <a href="https://github.com/CalvinLanger">ABSTERGO.com</a> © <span id="current-date">0000</span>
     </footer>
 
     <script src="app.js"></script>
